--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
 <body>
   <div class="matrix"><img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="container">
-    <p id="top-section-for-adding-element-to-list"><label for="new-task">Add Item</label>
-        <div class="task-row-wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
+    <p id="adding-item"><label for="new-task">Add Item</label>
+        <div class="wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
     </p>
     <h3>Todo</h3>
     <ul id="incomplete-tasks">
