--- a/index.html
+++ b/index.html
@@ -3,20 +3,20 @@
   <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700" rel="stylesheet">
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
-<body>
+<body class="page">
   <div class="matrix"><img src="./eisenhower-matrix.jpg"><a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a></div>
   <div class="container">
-    <p id="adding-item"><label for="new-task">Add Item</label>
-        <div class="wrapper"><input id="new-task"class="task" type="text"><button>Add</button></div>
+    <p id="adding-item"><label for="new-task" class="new-task new-task-label">Add Item</label>
+        <div class="wrapper"><input id="new-task"class="task task-text" type="text"><button class="btn-task">Add</button></div>
     </p>
-    <h3>Todo</h3>
-    <ul id="incomplete-tasks">
-      <li><input type="checkbox"><label class="task">Pay Bills</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
-      <li class="edit-mode"><input type="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task"><button class="edit">Save</button><button class="delete"><img src="./remove.svg"></button></li>
+    <h3 class="title-list">Todo</h3>
+    <ul id="incomplete-tasks" class="task-list">
+      <li class="task-item"><input type="checkbox" class="checkbox"><label class="task">Pay Bills</label><input type="text" class="task task-text"><button class="btn-task edit">Edit</button><button class="btn-task delete"><img class="remove-sign" src="./remove.svg"></button></li>
+      <li class="edit-mode task-item"><input type="checkbox" class="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task task-text"><button class="btn-task edit">Save</button><button class="btn-task delete"><img class="remove-sign" src="./remove.svg"></button></li>
     </ul>
-    <h3>Completed</h3>
-    <ul id="completed-tasks">
-        <li><input type="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task"><button class="edit">Edit</button><button class="delete"><img src="./remove.svg"></button></li>
+    <h3 class="title-list">Completed</h3>
+    <ul id="completed-tasks" class="task-list">
+      <li class="task-item"><input type="checkbox" class="checkbox" checked><label class="task">See the Doctor</label><input type="text" class="task task-text"><button class="btn-task edit">Edit</button><button class="btn-task delete"><img class="remove-sign" src="./remove.svg"></button></li>
     </ul>
   </div>
   <script src="app.js"></script>
