--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body class="page">
   <header class="matrix">
-    <img src="./eisenhower-matrix.jpg">
+    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
     <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
   <main class="container">
@@ -25,9 +25,14 @@
           <label class="task">Pay Bills</label>
           <input type="text" class="task task-text">
           <button class="btn-task edit">Edit</button>
-          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg"></button>
+          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg" alt=""></button>
         </li>
-        <li class="edit-mode task-item"><input type="checkbox" class="checkbox"><label class="task">Go Shopping</label><input type="text" value="Go Shopping" class="task task-text"><button class="btn-task edit">Save</button><button class="btn-task delete"><img class="remove-sign" src="./remove.svg"></button></li>
+        <li class="edit-mode task-item">
+          <input type="checkbox" class="checkbox">
+          <label class="task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task task-text">
+          <button class="btn-task edit">Save</button>
+          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg" alt=""></button></li>
       </ul>
     </section>
     <section>
@@ -38,7 +43,7 @@
           <label class="task">See the Doctor</label>
           <input type="text" class="task task-text">
           <button class="btn-task edit">Edit</button>
-          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg"></button>
+          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </section>
