--- a/index.html
+++ b/index.html
@@ -5,45 +5,45 @@
   <link rel="stylesheet" href="style.css" media="screen" charset="utf-8">
 </head>
 <body class="page">
-  <header class="matrix">
-    <img src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
-    <a class="more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
+  <header class="header">
+    <img class="header__matrix-img" src="./eisenhower-matrix.jpg" alt="Eisenhower matrix">
+    <a class="header__more-inf" href="https://goal-life.com/page/method/matrix-eisenhower">Want more details?</a>
   </header>
-  <main class="container">
-    <section id="adding-item">
-      <h3 class="new-task new-task-label">Add Item</h3>
+  <main class="main">
+    <section class="adding-item">
+      <h3 class="adding-item__new-task-title">Add Item</h3>
       <div class="wrapper">
-        <input id="new-task"class="task task-text" type="text">
-        <button class="btn-task">Add</button>
+        <input class="wrapper__task-text" id="new-task" type="text">
+        <button class="wrapper__task-btn">Add</button>
       </div>
     </section>
-    <section>
-      <h3 class="title-list">Todo</h3>
+    <section class="todo-items">
+      <h3 class="todo-items__list-title">Todo</h3>
       <ul id="incomplete-tasks" class="task-list">
-        <li class="task-item">
-          <input type="checkbox" class="checkbox">
-          <label class="task">Pay Bills</label>
-          <input type="text" class="task task-text">
-          <button class="btn-task edit">Edit</button>
-          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg" alt=""></button>
+        <li class="task-list__task-item">
+          <input type="checkbox" class="task-list__checkbox">
+          <label class="task-list__task">Pay Bills</label>
+          <input type="text" class="task-list__task-text">
+          <button class="task-list__btn-edit">Edit</button>
+          <button class="task-list__btn-delete"><img class="task-list__remove-sign" src="./remove.svg" alt=""></button>
         </li>
-        <li class="edit-mode task-item">
-          <input type="checkbox" class="checkbox">
-          <label class="task">Go Shopping</label>
-          <input type="text" value="Go Shopping" class="task task-text">
-          <button class="btn-task edit">Save</button>
-          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg" alt=""></button></li>
+        <li class="task-list__task-item task-list__task-item_mode_edit">
+          <input type="checkbox" class="task-list__checkbox">
+          <label class="task-list__task">Go Shopping</label>
+          <input type="text" value="Go Shopping" class="task-list__task-text">
+          <button class="task-list__btn-edit">Save</button>
+          <button class="task-list__btn-delete"><img class="task-list__remove-sign" src="./remove.svg" alt=""></button></li>
       </ul>
     </section>
-    <section>
-      <h3 class="title-list">Completed</h3>
-      <ul id="completed-tasks" class="task-list">
-        <li class="task-item">
-          <input type="checkbox" class="checkbox" checked>
-          <label class="task">See the Doctor</label>
-          <input type="text" class="task task-text">
-          <button class="btn-task edit">Edit</button>
-          <button class="btn-task delete"><img class="remove-sign" src="./remove.svg" alt=""></button>
+    <section class="completed">
+      <h3 class="completed__list-title">Completed</h3>
+      <ul class="task-list" id="completed-tasks">
+        <li class="task-list__task-item ">
+          <input class="task-list__checkbox" type="checkbox" checked>
+          <label class="task-list__task">See the Doctor</label>
+          <input type="text" class="task-list__task-text">
+          <button class="task-list__btn-edit">Edit</button>
+          <button class="task-list__btn-delete"><img class="task-list__remove-sign" src="./remove.svg" alt=""></button>
         </li>
       </ul>
     </section>
